--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -7,7 +7,7 @@ body {
   padding: 2rem;
   color: black;
   background-image: url("img/bg.png");
-}
+  background-color: white;
 }
 
 section:not([id]) {
