--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -4,10 +4,11 @@
 */
 body {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 2rem;
   color: black;
   background-image: url("img/bg.png");
   background-color: white;
+  
 }
 
 section:not([id]) {
