--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -6,14 +6,12 @@ body {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   padding: 2rem 2rem 2rem 2rem;
   color: black;
-  background-image: url("img/bg.png");
-  background-color: white;
-  
+  background-image: ("http://www.sfu.ca/~bkl6/IAT339/Style%20Guide/img/bg.png");  
 }
 
 section:not([id]) {
   margin: 1em 0;
-  padding: 1em 0;
+  padding: 0.1em 0 2.6em 0;
   border-bottom: 0.15em solid #333;
 }
 
@@ -33,7 +31,7 @@ section p {
 nav.mainMenu {
     background-color: black;
     margin: -2.5rem -2.5rem 0 -2.5rem;
-    padding: 0.7rem 19rem 0.7rem 2rem;
+    padding: 0.7rem 19rem 0.7rem 2.5rem;
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 0.9rem;
     color: #FFF;
@@ -172,13 +170,21 @@ ol li {
     color: black;
 }
 
+ol {
+    margin-bottom: 0rem;
+}
+
+ul {
+    margin-bottom: 0rem;
+}
+
 h1.header {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 2.9rem;
     color: white;
     background-color: #696969;
     margin: 0rem -2.5rem 1.5rem -2.5rem;
-    padding: 0.5rem 0.5rem 0.5rem 2rem;
+    padding: 0.5rem 0.5rem 0.5rem 2.5rem;
     text-transform: uppercase;
 }
 
@@ -206,6 +212,10 @@ h4 {
     text-transform: uppercase;
 }
 
+h4.sampleH4 {
+    margin-bottom: 0rem;
+}
+
 h5 {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 1rem;
@@ -216,6 +226,10 @@ p {
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 0.9rem;
     max-width: 40rem;
+}
+
+p.sampleParagraph {
+    margin-bottom: 0rem;
 }
 
 h2.idTitle {
