--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -17,7 +17,6 @@ section:not([id]) {
 }
 
 section h2 {
-  margin-top: 2.1em;
   margin-bottom: 0.5em;
 }
 
@@ -329,6 +328,10 @@ nav a:active, a:hover {
 	-webkit-transition: 0.4s;
 }
 
+a:active {
+    color: #fff;
+}
+
 section code {
     background-color: whitesmoke;
     padding: 0.5em 0.75em;
@@ -436,7 +439,7 @@ label {
 	text-align: center;
     color: white;
     width: 6rem;
-	height: 3rem;
+	height: 7.5rem;
 }
 
 .cBlack {
