--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -271,6 +271,10 @@ nav.menu {
     color: white;
 }
 
+.eighth {
+    padding-bottom: 2em;
+}
+
 /*
   STYLE GUIDE STYLING 
   Default styling for the style guide 
