--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -271,6 +271,9 @@ nav.menu {
     color: white;
 }
 
+.bottom {
+    margin-bottom: 3em;
+}
 /*
   STYLE GUIDE STYLING 
   Default styling for the style guide 
