Retructured folders and added the "Previous" page, connect "previous" and "homepage" with css

--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -50,6 +50,14 @@ ul{
 
 }
 
+.footer-main{
+    display:block;
+    color: white;
+    background-color: black;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    text-align:center;
+}
 
 .web-nav{
     display:inline-block;
