--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -29,12 +29,27 @@ p, h2{
     text-align: left;
 }
 
-.purchase-item, .purchase-item2{
+.purchase-item3{
     display: inline-block;
     margin-top: 0em;
     padding-top: 2em;
-    padding-bottom:4em;
-    background-color: white;
+    padding-bottom:14em;
+    background-color: #EBE2D2;
+    text-align:left;
+    width:100%;
+     border-bottom: 0.05em solid grey; 
+    color: black;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.purchase-item1{
+    display: inline-block;
+    margin-top: 0em;
+    padding-top: 2em;
+    padding-bottom:26.5em;
+    background-color: #EBE2D2;
+    border-bottom: 0.05em solid grey; 
     text-align:left;
     width:100%;
     color: black;
@@ -42,8 +57,18 @@ p, h2{
     box-sizing: border-box;
 }
 
+
 .purchase-item2{
+    display: inline-block;
+    margin-top: 0em;
     background-color: #EBE2D2;
+    text-align:left;
+    width:100%;
+    color: black;
+     border-bottom: 0.05em solid grey; 
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  
 }
 
 .image-box{
