--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -54,10 +54,12 @@ ul{
 .web-nav{
     display:inline-block;
     background-color:black;
-    padding:1em 0;
+    padding: 1em 0;
+    margin: -2.5rem 0rem 0rem 3rem;
     text-align:center;
     text-decoration: none;
     width:100%;
+	float: left;
+    display: block;
 }
-
 
