Enhanced code to fit for our layout

--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -108,13 +108,15 @@
 ul.cheflist {
 	list-style: none;
 	font-size: 0px;
-	margin-left: 8.5%; /* should match li left margin */
-    margin-right: 1.5%; /* should match li left margin */
+	margin-left: 17.5%; 
+    margin-right: 3%;  
+    padding-bottom: 2rem;
 }
 ul.cheflist li {
 	display: inline-block;
 	padding: 10px;
-	margin: 2.5% 2% 1% 2.5%;
+	margin: 3.5% 2.7% 1% 3.5%;
+    padding-bottom: 0.2rem;
 	background: #fff;
 	border: 1px solid #ddd;
 	font-size: 16px;
@@ -128,10 +130,10 @@ ul.cheflist li {
 ul.cheflist li img {
 	max-width: 100%;
 	height: auto;
-	margin: 0 0 10px;
+	margin: 0 0 1.4rem;
 }
 ul.cheflist li h3 {
-	margin: 0 0 5px;
+	margin: 0 0 0.5rem;
 }
 ul.cheflist li p {
 	font-size: .9em;
@@ -145,7 +147,7 @@ ul.cheflist.columns-2 li {
 /* class for 3 columns */
 ul.cheflist.columns-3 li {
 	/*width: 30.83%;*/ /* this value + 2.5 should = 33% */
-    width: 24.83%;
+    width: 18.83%;
 }
 /* class for 4 columns */
 ul.cheflist.columns-4 li {
@@ -165,6 +167,7 @@ ul.cheflist.columns-4 li {
 	}
 	ul.cheflist li {
 		width: 100% !important; /* over-ride all li styles */
-		margin: 1rem 0rem 1rem 0;
+		margin: 1rem 0rem 1rem -1rem;
+        padding-right: -15rem;
 	}
 }
