--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -216,4 +216,10 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     width:100%;
 }
 
+/*About page*/
+.about p{
+    max-width: 48%;
+    line-height: 1.5em;
+	color: #999;
+}
 
