Updated About Page Grid

--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -245,8 +245,8 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
 }
 
 .middleOf3 {
-    float: middle;
+    float: left;
 }
 .leftOf3 {
-    float: right;
+    float: left;
 }
