--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -53,6 +53,9 @@
 	width:100%;
 }
 
+.grid-col-6of10{
+	width:100%;
+}
 .grid-col-7of10{
 	width:100%;
 }
@@ -86,6 +89,10 @@
     }
 	.grid-col-5of10{
 	width:50%;
+	}
+
+	.gruid-col-6of10{
+		width:60%;
 	}
 
 	.grid-col-7of10{
