--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -28,6 +28,14 @@ ul{
     float:left;
 }
 
+ol{
+    list-style-type: none;
+}
+
+li{
+    margin-left:0em;
+}
+
 p, h2, h3{
     text-align: left;
     width:100%;
@@ -100,6 +108,33 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     -webkit-transition: width 2s; 
 }
 
+.chef-border2{
+    display:inline-block;
+    background-color: grey;
+    padding:8em 2em 15.25em 2em;
+    text-align:left;
+    color: white;
+    width:100%;
+    margin: 0em;
+    margin-bottom:0.5;
+    transition: width 2s;
+    -webkit-transition: width 2s; 
+}
+
+.chef-border3{
+    display:inline-block;
+    background-color:#696969;
+    margin-left:2em;
+    text-align:left;
+    color: white;
+    width:100%;
+    margin: 0em;
+    margin-bottom:0.5;
+    border-left: 0.05em solid white;
+    transition: width 2s;
+    -webkit-transition: width 2s; 
+}
+/*
 .chef-border:hover{
     float:left;
     color:black;
@@ -160,10 +195,9 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
 }
 
 .icon{
-    margin-left: 0.5em;
+    margin-left:3em;
     background-color: #696969;
-    width:20%;
-    height:4%;
+
 }
 
 /*make column the same high*/
@@ -176,6 +210,12 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     width:100%;
     height: 72.5%;
 }
+
+.placeholder3{
+    width:100%;
+    height: 9%;
+}
+
 
 /*Styling fill in area: mostly at purchase webpage*/
 
@@ -195,7 +235,7 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
   width:80%;
 }
 
-.default-buttom, .submit-buttom{
+.default-buttom, .submit-buttoml,.book-bottom{
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     color: black;
     background: white;
@@ -207,8 +247,32 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     font-weight: bold;
 }
 
+.book-buttom{
+    margin-left: 2em;
+    padding: 0.5em 1em;
+    font-weight: bold;
+
+}
+
 .default-buttom:hover, .submit-buttom:hover{
     opacity:0.4;
+}
+
+.checkbox input {
+    position: relative;
+    z-index: -9999;
+}
+
+.checkbox span {
+    background-color: black;
+    width: 20px;
+    height: 20px;
+    display: block;
+    background: url("link_to_resturant");
+}
+
+.checkbox input:checked + span {
+    background: url("link_to_resturant");
 }
 
 /*Event page*/
