--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -47,6 +47,15 @@ footer{
     padding: 0.02em 0;
 }
 
+#footer {
+	background:#ffab62;
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
 /*Home page styling*/
 
 /*Styling naviation bar and footer section*/
