--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -360,3 +360,23 @@ li.foodType {
 li.foodType1 {
     margin: 3.7rem 0rem 0.3rem 2rem;
 }
+
+li.allergies {
+    margin: 3.7rem 0rem 0.3rem 0rem;
+}
+
+.infoBook{
+    display: inline-block;
+    margin-top: 0;
+    margin-left: 1em;
+    padding-top: 3em;
+    background-color: white;
+    text-align:center;
+    width:100%;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.floatLeft {
+    float:left;
+}
