--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -200,8 +200,21 @@ ul.cheflist.columns-4 li {
 /*detail*/
 
 @media(max-width: 52em){
-    .grid-col-1of4{
-		margin: 5rem 5rem 5rem;
+    .aboutList{
+		margin: 0rem 2rem 1rem -2rem;
+	}
+}
+
+@media(max-width: 52em){
+    .default-buttom floatLeft {
+		margin: 0rem 0rem 5rem 0rem;
+        padding-bottom: 5rem;
+	}
+}
+
+@media(max-width: 52em){
+    .about {
+        padding: 1rem;
 	}
 }
 
