--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -53,6 +53,9 @@
 	width:100%;
 }
 
+.grid-col-6of10{
+	width:100%;
+}
 .grid-col-7of10{
 	width:100%;
 }
@@ -88,6 +91,10 @@
 	width:50%;
 	}
 
+	.gruid-col-6of10{
+		width:60%;
+	}
+
 	.grid-col-7of10{
 	width:66.66%;
 	}
@@ -97,14 +104,117 @@
 	}
 }
 
-
-
-
 @media(min-width: 36em){
 	.grid-col-2of10{
 	width: 20%;
 
 	}
-
-	
 }
+
+/*Previous Listing Grid*/
+ul.cheflist {
+	list-style: none;
+	font-size: 0px;
+	margin-left: 17.5%; 
+    margin-right: 3%;  
+    padding-bottom: 2rem;
+}
+ul.cheflist li {
+	display: inline-block;
+	padding: 10px;
+	margin: 3.5% 2.7% 1% 3.5%;
+    padding-bottom: 0.2rem;
+	background: #fff;
+	border: 1px solid #ddd;
+	font-size: 16px;
+	font-size: 1rem;
+	vertical-align: top;
+	box-shadow: 0 0 5px #ddd;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+ul.cheflist li img {
+	max-width: 100%;
+	height: auto;
+	margin: 0 0 1.4rem;
+}
+ul.cheflist li h3 {
+	margin: 0 0 0.5rem;
+}
+ul.cheflist li p {
+	font-size: .9em;
+	line-height: 1.5em;
+	color: #999;
+}
+/* class for 2 columns */
+ul.cheflist.columns-2 li {
+	width: 47.5%; /* this value + 2.5 should = 50% */
+}
+/* class for 3 columns */
+ul.cheflist.columns-3 li {
+	/*width: 30.83%;*/ /* this value + 2.5 should = 33% */
+    width: 18.83%;
+}
+/* class for 4 columns */
+ul.cheflist.columns-4 li {
+	width: 22.5%; /* this value + 2.5 should = 25% */
+}
+ 
+@media (max-width: 480px) {
+	ul.grid-nav li {
+		display: block;
+		margin: 5rem 5rem 5rem;
+	}
+	ul.grid-nav li a {
+		display: block;
+	}
+	ul.cheflist {
+		margin-left: 0;
+	}
+	ul.cheflist li {
+		width: 100% !important; /* over-ride all li styles */
+		margin: 1rem 0rem 1rem -1rem;
+        padding-right: -15rem;
+	}
+}
+
+@media(max-width: 52em){
+		ul.grid-nav li {
+		display: block;
+		margin: 5rem 5rem 5rem;
+	}
+	ul.grid-nav li a {
+		display: block;
+	}
+	ul.cheflist {
+		margin-left: 0;
+	}
+	ul.cheflist li {
+		width: 100% !important; /* over-ride all li styles */
+		margin: 1rem 0rem 1rem -1rem;
+        padding-right: -15rem;
+	}
+}
+
+/*detail*/
+
+@media(max-width: 52em){
+    .aboutList{
+		margin: 0rem 2rem 1rem -2rem;
+	}
+}
+
+@media(max-width: 52em){
+    .default-buttom floatLeft {
+		margin: 0rem 0rem 5rem 0rem;
+        padding-bottom: 5rem;
+	}
+}
+
+@media(max-width: 52em){
+    .about {
+        padding: 1rem;
+	}
+}
+
