--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -26,6 +26,7 @@ ul{
     list-style-type: none;
     color: black;
     float:left;
+
 }
 
 ol{
@@ -36,9 +37,22 @@ li{
     margin-left:0em;
 }
 
-p, h2, h3{
+p{
     text-align: left;
+    font-size: 0.8em;
+    margin-right:1.5rem;
+    margin-top:-1em;
     width:100%;
+}
+
+h2{
+    text-align:left;
+    font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
+    margin-left:2.8rem;
+}
+
+h3{
+    margin-right:6rem;
 }
 
 h1 {
@@ -188,20 +202,11 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     padding-bottom:1em;
 }
 
+.calendar{
+    margin-right:8rem;
+}
 /*Styling image area, fill and buttom: purchase webpage*/
 
-.image-box{
-    background-color:white;
-    border-left: 0.05em solid grey; 
-    margin-top: 0.5em;
-    width:100%;
-}
-
-.icon{
-    margin-left:3em;
-    background-color: #696969;
-
-}
 
 /*make column the same high*/
 .placeholder{
@@ -246,8 +251,11 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
 }
 
 .submit-buttom{
-    padding: 1em 6em;
+    padding: 1em 8em;
     font-weight: bold;
+    border:none;
+    outline-color:1em solid black;
+    margin-left:2.5rem;
 }
 
 .book-buttom{
