--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -60,6 +60,10 @@
 	width:100%;
 }
 
+.grid-col-7of10-purchase{
+	width:100%;
+}
+
 @media(min-width:47em){
 	.grid-col-4of10{
 		width:40%;
@@ -97,6 +101,11 @@
 
 	.grid-col-7of10{
 	width:66.66%;
+	}
+
+	.grid-col-7of10-purchase{
+	width:66.66%;
+	margin-left:-4rem;
 	}
 
 	.grid-col-10of10{
