--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -48,6 +48,9 @@ p.purchase-info{
     margin-top:-1em;
 }
 
+p.purchase-info1{
+    margin-right:4rem;
+}
 h2{
     text-align:left;
     font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
@@ -210,7 +213,9 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     visibility:visible;
 }
 
-
+input[type = "submit"]:hover > .purchasse-item2{
+    visibility:visible;
+}
 
 .calendar{
     margin-right:8rem;
@@ -234,6 +239,9 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     height: 70.25%;
 }
 
+.placeholder4{
+    visibility:hidden;
+}
 
 /*Styling fill in area: mostly at purchase webpage*/
 
@@ -300,17 +308,19 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
 
 
 .checkbox input {
+    height:1.5em;
     position: relative;
+    margin-top:1em;
+    margin-left:-2.3rem;
     width:100%;
     z-index: 1;
-    margin-left:2.2rem;
 }
 
 .checkbox span {
     background-color: black;
     width: 20em;
     height: 20em;
-    display: block;
+    display: inline-block;
     background: url("link_to_resturant");
 }
 
