--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -82,7 +82,6 @@ h5 {
 }
 
 footer{
-    font-size: 0.5em;
     padding: 0.02em 0;
 }
 
@@ -104,6 +103,7 @@ footer{
     padding: 1em 0;
     margin-top:0em;
     text-align:center;
+    color:#696969;
     text-decoration: none;
     border-bottom: 0.2em solid black;
     width:100%;
@@ -119,6 +119,7 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
 
 .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover{
     border-bottom: 0.2em solid #ED5C0C;
+    color:white;
 }
 
 /*Styling for chef lists on homepage*/
@@ -231,12 +232,12 @@ input[type = "submit"]:hover > .purchasse-item2{
 
 .placeholder2{
     width:100%;
-    height: 65%;
+    height: 68%;
 }
 
 .placeholder3{
     width:100%;
-    height: 70.25%;
+    height: 72.85%;
 }
 
 .placeholder4{
@@ -289,9 +290,9 @@ input[type = "submit"]:hover > .purchasse-item2{
 }
 
 .book-buttom{
-    margin-top:8em;
-    margin-left: -5em;
-    padding: 0.5em 1em;
+    margin-top:1em;
+    padding: 0.5em 1em 0.5em 1em;
+    width:100%;
     background-color:#ED5C0C;
     color:white;
     opacity:0.7;
