--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -42,18 +42,9 @@ p{
     width:100%;
 }
 
-p.purchase-info{
-    font-size: 0.8em;
-    margin-right:1.5rem;
-    margin-top:-1em;
-}
-
-p.purchase-info1{
-    margin-right:4rem;
-}
 h2{
-    text-align:left;
     font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
+    text-align:left;
 }
 
 h2.steps{
@@ -97,7 +88,12 @@ footer{
 /*Home page styling*/
 
 /*Styling naviation bar and footer section*/
+.logo{
+    font-weight:bold;
+    font-style:italic;
+}
 .web-nav{
+    font-family: 'Abel', 'Helvetica', 'Arial', sans-serif;
     display:block;
     background-color:black;
     padding: 1em 0;
@@ -122,7 +118,13 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     color:white;
 }
 
+.logo:hover{
+    border-bottom:0.2em solid black;
+}
+
 /*Styling for chef lists on homepage*/
+
+/* might use later
 .chef-border,.chef-border2, .chef-border3{
     display:inline-block;
     background-color:white;
@@ -131,10 +133,7 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     margin-top:3em;
     transition: width 2s;
     -webkit-transition: width 2s; 
-
 }
-
-
 
 .chef-border2{
     background-color: grey;
@@ -150,25 +149,16 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     padding-left:1em;
     margin-bottom:0.5;
     border-left: 0.05em solid white;
-
 }
 
 
 .chef-border:hover{
     color:black;
 }
+*/
 
 .underline{
      border-bottom: 0.1em solid white;
-}
-/*
-.chef-border:hover{
-    position:absolute;
-    float:left;
-    color:black;
-    width:400%;
-    z-index:20;
-
 }
 
 /* mobile navigation for next week
@@ -214,6 +204,17 @@ a:hover, .web-nav:hover, .mobile-nav:hover, .mobile-nav-dropdown:hover, .detail-
     visibility:visible;
 }
 
+p.purchase-info{
+    font-size: 0.8em;
+    margin-right:1.5rem;
+    margin-top:-1em;
+}
+
+p.purchase-info1{
+    margin-right:4rem;
+}
+
+/*code problem: for hiding purchase process*/
 input[type = "submit"]:hover > .purchasse-item2{
     visibility:visible;
 }
@@ -227,7 +228,7 @@ input[type = "submit"]:hover > .purchasse-item2{
 /*make column the same high*/
 .placeholder{
     width:100%;
-    height:41.5%;
+    height:48.2%;
 }
 
 .placeholder2{
@@ -237,7 +238,7 @@ input[type = "submit"]:hover > .purchasse-item2{
 
 .placeholder3{
     width:100%;
-    height: 72.85%;
+    height: 79.3%;
 }
 
 .placeholder4{
@@ -265,17 +266,17 @@ input[type = "submit"]:hover > .purchasse-item2{
 .default-buttom,.book-bottom{
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     color: black;
-    background: white;
+    background-color: white;
     width:100%;
 }
 
 .submit-buttom{
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     padding: 1em 5em 1em 5em;
     background-color:white;
     margin-top:0.8em;
     color:#ED5C0C;
     width:100%;
-  
 }
 
 .submit-buttom, .book-buttom{
@@ -283,7 +284,7 @@ input[type = "submit"]:hover > .purchasse-item2{
     border:solid #ED5C0C;
 }
 
-.submit-buttom:focus~ .purchase-item2, .submit-buttom:hover{
+.submit-buttom:focus, .submit-buttom:hover{
    color:white;
    background-color:#ED5C0C;
    visibility:visible;
@@ -307,7 +308,7 @@ input[type = "submit"]:hover > .purchasse-item2{
     outline:0 !important;
 }
 
-
+/*check box style*/
 .checkbox input {
     height:1.5em;
     position: relative;
@@ -349,16 +350,6 @@ input[type = "submit"]:hover > .purchasse-item2{
 
 .detail-info:hover{
     opacity:1;
-}
-
-/*image sectino*/
-.event-box{
-    margin-top: 0.3em;
-    background-color: #696969;
-    color: white;
-    padding: 0.5em 3em 8em 3em;
-    border-left: 0.05em solid white; 
-    width:100%;
 }
 
 /*About page*/
@@ -434,6 +425,7 @@ li.allergies {
     float:left;
 }
 
+/* text overlay image for homepage and expanded page*/
 figure {
     position: relative;
     max-width: 100%;
@@ -445,7 +437,7 @@ figcaption {
     bottom: 2.5em;
     left: 0em;
     z-index: 10;
-    color:  #ED5C0C;
+    color: #ED5C0C;
     opacity:0;
     padding:4em;
 }
