Updated the 2 detail pages to have email icon and chef image. Uploading images to link.

--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -451,6 +451,15 @@ li.allergies {
     float:left;
 }
 
+.floatLeftColumn2 {
+    float:left;
+    margin-left: 1rem;
+}
+
+.paddingtop {
+    margin-top: 2.5rem;
+}
+
 figure {
     position: relative;
     max-width: 100%;
