--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -555,15 +555,19 @@ figcaption.expanded-info{
 }
 
 figcaption.information{
-    position: absolute;
+    position: absolute; 
     bottom: 0em;
     left: -2em;
-   
+    opacity:0;
 }
 
+figcaption.information:hover, img.information:hover{
+    opacity:1;
+
+}
 li.information{
     margin-left: -3em;
-    margin-top: 0.5em;
+    margin-top: 1em;
     color: white;
 
 }
@@ -571,7 +575,10 @@ li.information{
 img.information{
     max-width:100%;
     height:auto;
+    margin-top:-1em;
+    bottom:0em;
 }
+
 
 img.heart{
     margin-top: 0.5em;
