--- a/Template_Structure/css/main.css
+++ b/Template_Structure/css/main.css
@@ -139,10 +139,8 @@ footer{
     width:100%;
     float: left;
 
-
     color: rgba(255,255,255, 0.8);
 
-    opacity:0.7;
 }
 
 .nav-toggle{
@@ -437,6 +435,11 @@ input[type = "submit"]:hover > .purchasse-item2{
     padding-bottom:3em;
     display:inline-block;
     float: left;
+}
+
+.aboutHeader {
+  text-align: center;
+    width: 100%;
 }
 
 .leftOf3 {
