--- a/Template_Structure/css/grid.css
+++ b/Template_Structure/css/grid.css
@@ -58,6 +58,7 @@
 	width:100%;
 }
 
+
 .grid-col-10of10{
 	width:100%;
 }
@@ -69,9 +70,7 @@
 	width:100%;
 }
 
-.grid-col-7of10-purchase{
-	width:100%;
-}
+
 
 @media(min-width:47em){
 	.grid-col-4of10{
@@ -113,6 +112,10 @@
 	width:66.66%;
 	}
 
+    .grid-col-3of10-process2{
+    	width:33.33%;
+    }
+
 	.grid-col-7of10-purchase{
 	width:66.66%;
 	margin-left:-4rem;
@@ -126,8 +129,10 @@
 @media(min-width: 36em){
 	.grid-col-2of10{
 	width: 20%;
-
 	}
+
+	
+
 }
 
 /*Previous Listing Grid*/
@@ -253,10 +258,21 @@ ul.cheflist.columns-4 li {
 	figcaption.information{
 		font-size:50%;
 	}
+
+	figcaption.expanded-info{
+		font-size:50%;
+	}
 }
 
 @media(max-width: 52em){
     figcaption.information{
+		font-size:100%;
+	}
+
+    .book-buttom{
+    	width:100%;
+    }
+	figcaption.expanded-info{
 		font-size:100%;
 	}
 
@@ -266,7 +282,105 @@ ul.cheflist.columns-4 li {
 	figcaption.information{
 		font-size:75%;
 	}
+
+	figcaption.expanded-info{
+		font-size:75%;
+	}
+
+	 .book-buttom{
+    	width:55%;
+    }
+
 }
 
 
 
+/*grid for purchase process*/
+
+.grid-col-4of10-process2{
+    width:33.33%;
+}
+
+.grid-col-7of10-purchase{
+	width:66.66%;
+}
+
+@media(min-width: 36em){
+
+ 	.grid-col-3of10-process2{
+    	width:33.33%;
+    }
+    
+	.grid-col-7of10-purchase{
+	width:66.66%;
+	margin-left:-3rem;
+	}
+
+}
+
+@media(max-width: 37em){
+
+	.grid-col-4of10-process1{
+    	width:100%;
+    	
+    }
+
+
+	.grid-col-3of10-process2{
+    	width:33.33%;
+    }
+    
+	.grid-col-7of10-purchase{
+	width:66.66%;
+	margin-left:-3rem;
+	}
+
+}
+@media(max-width: 46em){
+
+ 	.grid-col-4of10-process1{
+    	width:100%;
+    	margin-left: -2em;
+    	margin-top: 1em;
+    }
+
+    .grid-col-3of10-process2{
+    	width:33.33%;
+    }
+    
+	.grid-col-7of10-purchase{
+	width:66.66%;
+	margin-left:-3rem;
+	}
+
+}
+
+@media(min-width: 52em){
+	
+	.grid-col-4of10-process1{
+    	width:45%;
+    	margin-left:-3em;
+    }
+
+}
+
+@media(max-width:62.37em){
+
+	 .grid-col-3of10-process2{
+    	width:33.33%;
+    
+    }
+    
+	.grid-col-7of10-purchase{
+	width:66.66%;
+	margin-left:-2rem;
+	}
+
+	}
+
+@media(min-width:70em){
+	 .grid-col-4of10-process1{
+    	width:45%;
+    	margin-left:-1em;
+    }
+}
